--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,6 @@ name = 'lametricTravys'
 python_version = '3.6'
 
 [packages]
-flask = '*'
-urllib3 = '*'
-gunicorn = '>19.0'
+flask = "*"
+urllib3 = "*"
+gunicorn = "*"
